--- a/package.json
+++ b/package.json
@@ -55,16 +55,15 @@
     "@types/mocha": "^7.0.2",
     "@types/node": "^10.17.21",
     "@types/sinon": "^9.0.0",
+    "@types/sinon-chai": "^3.2.4",
     "chai": "^4.2.0",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
     "sinon": "^9.0.2",
     "source-map-support": "^0.5.19",
     "ts-node": "^8",
-    "typescript": "^3"
-  },
-  "dependencies": {
-    "@types/sinon-chai": "^3.2.4",
+    "typescript": "^3",
     "sinon-chai": "^3.5.0"
-  }
+  },
+  "dependencies": {}
 }
